--- a/app/src/main/res/layout/activity_asl.xml
+++ b/app/src/main/res/layout/activity_asl.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/test"
-    tools:context=".MainActivity">
+    tools:context=".ASLActivity">
 
     <FrameLayout
         android:id="@+id/overlay"
