--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -23,6 +23,19 @@
         <item name="cardCornerRadius">5dp</item>
     </style>
 
+    <style name="card_games">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">10dp</item>
+        <item name="android:layout_marginEnd">10dp</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="cardElevation">3dp</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="cardCornerRadius">5dp</item>
+    </style>
+
     <style name="default_text">
         <item name="android:textColor">@color/black</item>
         <item name="android:layout_width">match_parent</item>
