--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/test"
     tools:context=".MainActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_centerInParent="true"
@@ -12,42 +14,92 @@
         android:gravity="center"
         android:padding="10dp"
         android:layout_height="wrap_content">
-        <Button
-            android:id="@+id/asl"
-            android:text="American Sign Language"
+
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="wrap_content"
+            android:layout_height="120dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center"
+            android:scaleType="fitCenter"
+            android:src="@drawable/logo">
+
+        </ImageView>
+
+        <TextView
+            android:layout_alignParentTop="true"
+            android:layout_marginBottom="100dp"
+            android:id="@+id/title_text"
+            android:textColor="@color/black"
+            style="@style/title_text"
+            android:text="SIGN LANGUAGE STARTER" />
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingStart="70dp"
+            android:paddingEnd="70dp"
+            android:orientation="vertical">
 
-        </Button>
+            <Button
+                android:id="@+id/btnAsl"
+                android:text="American Sign Language"
+                style="@style/button_white">
+            </Button>
 
-        <Button
-            android:id="@+id/btn_miniG"
-            android:text="Mini games"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            <Button
+                android:id="@+id/btnFsl"
+                android:text="FILIPINO SIGN LANGUAGE"
+                style="@style/button_white">
 
-        </Button>
+            </Button>
 
-        <Button
-            android:id="@+id/btn_tips"
-            android:text="Tips For Learning Sing Language"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            <Button
+                android:id="@+id/btn_miniG"
+                android:text="Mini games"
+                style="@style/button_white">
 
-        </Button>
+            </Button>
 
-        <Button
-            android:layout_marginTop="30dp"
-            android:id="@+id/btn_exit"
-            android:text="exit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            <Button
+                android:id="@+id/btn_tips"
+                android:text="Learning Tips"
+                style="@style/button_white">
 
-        </Button>
+            </Button>
 
+            <Button
+                android:layout_marginTop="30dp"
+                android:id="@+id/btn_exit"
+                android:text="exit"
+                style="@style/button_white">
+
+            </Button>
+
+        </LinearLayout>
 
 
     </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="@color/white"
+        android:clickable="true"
+        android:elevation="3dp"
+        android:focusable="true"
+        app:fabCustomSize="30dp"
+        android:src="@drawable/ic_baseline_info_24"
+        app:borderWidth="0dp"
+        app:fabSize="normal" />
 
 
 </RelativeLayout>
