--- a/app/src/main/res/layout/fragment_guess_the_sign_game.xml
+++ b/app/src/main/res/layout/fragment_guess_the_sign_game.xml
@@ -4,17 +4,98 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MiniGames.GuessTheSign.GuessTheSignGame">
+    tools:context=".MiniGames.GuessTheSign.GuessTheSignGame"
+    android:background="@color/test">
+
+    <androidx.cardview.widget.CardView
+        android:visibility="gone"
+        android:id="@+id/card_result"
+        android:layout_width="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@color/white"
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <nl.dionsegijn.konfetti.KonfettiView
+                android:id="@+id/konfetti_view"
+                android:layout_alignParentTop="true"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_centerInParent="true"
+                android:layout_gravity="center"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_final_score"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp"
+                    android:textSize="30dp"
+                    android:text="SCORE"/>
+
+                <TextView
+                    android:id="@+id/tv_message"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="30dp"
+                    android:layout_marginBottom="40dp"
+                    android:text="MESSAGE"/>
+
+                <LinearLayout
+                    android:layout_marginStart="30dp"
+                    android:layout_marginEnd="30dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/btn_final_restart"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:text="RESTART"/>
+
+                    <Button
+                        android:id="@+id/btn_final_change_difficulty"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:text="CHANGE DIFFICULTY"/>
+
+                    <Button
+                        android:id="@+id/btn_final_quit"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="QUIT"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+
+    </androidx.cardview.widget.CardView>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         android:id="@+id/tv_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/img_guess">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:id="@+id/layout_header1"
@@ -26,11 +107,15 @@
             app:layout_constraintEnd_toEndOf="parent">
 
             <TextView
+                android:textColor="#1E1E1E"
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="MODE: "/>
 
             <TextView
+                android:textColor="#1E1E1E"
+                android:id="@+id/tv_mode"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="EASY"/>
@@ -38,6 +123,8 @@
         </LinearLayout>
 
         <TextView
+            android:textColor="#1E1E1E"
+            android:textStyle="bold"
             android:id="@+id/tv_question_num"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -47,14 +134,17 @@
             android:text="20/20"/>
 
         <TextView
+            android:textColor="#1E1E1E"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@id/tv_correct_answers_num"
             app:layout_constraintTop_toBottomOf="@id/layout_header1"
             app:layout_constraintBottom_toBottomOf="parent"
             android:text="Correct Answers: "/>
 
         <TextView
+            android:textColor="#1E1E1E"
             android:id="@+id/tv_correct_answers_num"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -82,6 +172,7 @@
         app:layout_constraintBottom_toTopOf="@id/layout_options"
         app:layout_constraintStart_toStartOf="parent"
         android:textSize="50sp"
+        android:textColor="#1E1E1E"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -107,12 +198,14 @@
 
             <Button
                 android:layout_weight="1"
+                android:backgroundTint="@color/white"
                 android:id="@+id/btn_option1"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="A"/>
 
             <Button
+                android:backgroundTint="@color/white"
                 android:layout_weight="1"
                 android:id="@+id/btn_option2"
                 android:layout_width="wrap_content"
@@ -120,6 +213,7 @@
                 android:text="B"/>
 
             <Button
+                android:backgroundTint="@color/white"
                 android:layout_weight="1"
                 android:id="@+id/btn_option3"
                 android:layout_width="wrap_content"
@@ -127,6 +221,7 @@
                 android:layout_height="match_parent"/>
 
             <Button
+                android:backgroundTint="@color/white"
                 android:layout_weight="1"
                 android:id="@+id/btn_option4"
                 android:layout_width="wrap_content"
@@ -143,6 +238,7 @@
             android:weightSum="4">
 
             <Button
+                android:backgroundTint="@color/white"
                 android:layout_weight="1"
                 android:id="@+id/btn_option5"
                 android:layout_width="match_parent"
@@ -150,6 +246,7 @@
                 android:layout_height="match_parent"/>
 
             <Button
+                android:backgroundTint="@color/white"
                 android:layout_weight="1"
                 android:id="@+id/btn_option6"
                 android:layout_width="match_parent"
@@ -157,6 +254,7 @@
                 android:layout_height="match_parent"/>
 
             <Button
+                android:backgroundTint="@color/white"
                 android:layout_weight="1"
                 android:id="@+id/btn_option7"
                 android:layout_width="match_parent"
@@ -164,6 +262,7 @@
                 android:layout_height="match_parent"/>
 
             <Button
+                android:backgroundTint="@color/white"
                 android:layout_weight="1"
                 android:id="@+id/btn_option8"
                 android:layout_width="match_parent"
@@ -175,16 +274,17 @@
     </LinearLayout>
 
     <LinearLayout
-        android:padding="20dp"
+        android:padding="10dp"
         android:id="@+id/layout_footer"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="2">
+        android:weightSum="3">
 
         <Button
+            android:backgroundTint="@color/white"
             android:layout_weight="1"
             android:id="@+id/btn_exit"
             android:layout_width="match_parent"
@@ -192,6 +292,15 @@
             android:layout_height="match_parent"/>
 
         <Button
+            android:backgroundTint="@color/white"
+            android:layout_weight="1"
+            android:id="@+id/btn_change_difficulty"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="CHANGE DIFFICULTY"/>
+
+        <Button
+            android:backgroundTint="@color/white"
             android:layout_weight="1"
             android:id="@+id/btn_restart"
             android:layout_width="match_parent"
