--- a/app/src/main/res/layout/fragment_tic_tac_sign_difficulty.xml
+++ b/app/src/main/res/layout/fragment_tic_tac_sign_difficulty.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MiniGames.GuessTheSign.GuessTheSignDifficulty"
+    tools:context=".MiniGames.TicTacSign.TicTacSignDifficulty"
     android:background="@color/test">
 
     <LinearLayout
