--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -23,6 +23,12 @@
         <item name="cardCornerRadius">5dp</item>
     </style>
 
+    <style name="button_white">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:backgroundTint">@color/white</item>
+    </style>
+
     <style name="card_games">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
