--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -21,7 +21,7 @@
             android:textStyle="bold"
             android:textColor="#191919"
             android:layout_marginBottom="40dp"
-            android:text="MINI GAMES"/>
+            android:text="MINI GAME"/>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/card_guess_the_sign"
@@ -73,6 +73,7 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
+            android:visibility="invisible"
             android:id="@+id/card_tic_tac_toe"
             style="@style/card_games">
 
